What's inside? -> Automatic Asset Image detection -> Lottie Animation Support (both asset and network) -> Network Image Support (using CachedNetworkImage for better image optimisation) -> PDF to Image(currently showing only the first page of the pdf as image) -> Multiple Image Extension Support for Assets files
version 1.0.0

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: nex_image
 description: "NexImage demonstrates the flexibility and capability of managing diverse media types."
 version: 1.0.0
-homepage:
+homepage: https://github.com/VISHALBHARDWAJ123/nex_image
 
 environment:
   sdk: ^3.0.0
